...
    <string name="hist_compare">Compare to branch</string>
    <string name="hist_compare_title">Compare to branch</string>
    <string name="hist_compare_branches">Branches</string>
    <string name="hist_compare_end">Stop comparing</string>
    <string name="hist_comparing">Comparing with %1$s</string>
    <string name="hist_behind">Behind</string>
    <string name="hist_ahead">Ahead</string>
    <plurals name="hist_behind_count">
        <item quantity="one">%1$d commit on %2$s not on this branch</item>
        <item quantity="other">%1$d commits on %2$s not on this branch</item>
    </plurals>
    <plurals name="hist_ahead_count">
        <item quantity="one">%1$d commit on this branch not on %2$s</item>
...
    </plurals>
    <plurals name="hist_range">
        <item quantity="one">%1$d commit</item>
        <item quantity="other">%1$d commits selected</item>
    </plurals>
    <string name="hist_show_more">Show more</string>
    <string name="hist_show_less">Show less</string>
    <string name="hist_authored">%1$s authored %2$s</string>
    <string name="hist_copy_sha">Copy SHA</string>
    <string name="hist_status_new">New</string>
    <string name="hist_status_modified">Modified</string>
    <string name="hist_status_deleted">Deleted</string>
    <string name="hist_status_renamed">Renamed</string>
...
